Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-7270

cannot slave_skip_errors for 1677

    XMLWordPrintable

Details

    • Can result in hang or crash
    • slave_skip_errors=ER_SLAVE_CONVERSION_FAILED failed to be processed because the replica aborts replication on column mismatch. Now whenever ER_SLAVE_CONVERSION_FAILED occurred and it is part of slave_skip_errors, the error is downgraded to a warning.

    Description

      Server: MariaDB
      Server version: 5.5.29-MariaDB-log MariaDB Server

                   Slave_IO_Running: Yes
                  Slave_SQL_Running: No
                    Replicate_Do_DB: 
                Replicate_Ignore_DB: 
                 Replicate_Do_Table: 
             Replicate_Ignore_Table: 
            Replicate_Wild_Do_Table: 
        Replicate_Wild_Ignore_Table: 
                         Last_Errno: 1677
                         Last_Error: Column 3 of table 'weather.lightning' cannot be converted from type 'decimal(0,?)' to type 'decimal(10,7)'
                       Skip_Counter: 0
                Exec_Master_Log_Pos: 30750050
                    Relay_Log_Space: 17251536284
                    Until_Condition: None
                     Until_Log_File: 
                      Until_Log_Pos: 0
                 Master_SSL_Allowed: No
                 Master_SSL_CA_File: 
                 Master_SSL_CA_Path: 
                    Master_SSL_Cert: 
                  Master_SSL_Cipher: 
                     Master_SSL_Key: 
              Seconds_Behind_Master: NULL
      Master_SSL_Verify_Server_Cert: No
                      Last_IO_Errno: 0
                      Last_IO_Error: 
                     Last_SQL_Errno: 1677
                     Last_SQL_Error: Column 3 of table 'weather.lightning' cannot be converted from type 'decimal(0,?)' to type 'decimal(10,7)'
        Replicate_Ignore_Server_Ids: 
                   Master_Server_Id: 1
      1 row in set (0.00 sec)
       
      | slave_skip_errors                | 1053,1062,1064,1677 |

      Attachments

        Activity

          People

            bnestere Brandon Nesterenko
            danblack Daniel Black
            Brandon Nesterenko Brandon Nesterenko
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - 0d
                0d
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 2d 1.95h
                2d 1.95h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.